--- a/packages/SystemUI/res/layout/heads_up.xml
+++ b/packages/SystemUI/res/layout/heads_up.xml
@@ -24,12 +24,18 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:paddingTop="@*android:dimen/status_bar_height"
     >
     <FrameLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/contentHolder"
-        android:background="@drawable/heads_up_window_bg"
-        />
+            android:layout_height="wrap_content"
+            android:layout_width="@dimen/notification_panel_width"
+            android:id="@+id/content_slider"
+            android:layout_marginStart="@dimen/notification_panel_margin_left"
+            >
+        <FrameLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/content_holder"
+                android:background="@drawable/heads_up_window_bg"
+                />
+    </FrameLayout>
 </com.android.systemui.statusbar.policy.HeadsUpNotificationView>
