Fix bug #10185976 Black patch displaying in place of drop down spinner across apps
This CL introduced the regression  from https://googleplex-android-review.git.corp.google.com/#/c/336753/

- use "nine-patch" instead of "bitmap" where needed
- fix also a file naming issue

Change-Id: Ib28c3622809e55fc3ed543e6ef34cc3df3421510

--- a/core/res/res/drawable/spinner_ab_default_holo_light.xml
+++ b/core/res/res/drawable/spinner_ab_default_holo_light.xml
@@ -17,7 +17,7 @@
  */
 -->
 
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+<nine-patch xmlns:android="http://schemas.android.com/apk/res/android"
         android:src="@drawable/spinner_ab_default_holo_light_am"
         android:autoMirrored="true">
-</bitmap>
+</nine-patch>
