--- a/core/res/res/drawable/popup_inline_error_above.xml
+++ b/core/res/res/drawable/popup_inline_error_above.xml
@@ -17,7 +17,7 @@
  */
 -->
 
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+<nine-patch xmlns:android="http://schemas.android.com/apk/res/android"
         android:src="@drawable/popup_inline_error_above_am"
         android:autoMirrored="true">
-</bitmap>
+</nine-patch>
