--- a/core/res/res/drawable/spinner_focused_holo_dark.xml
+++ b/core/res/res/drawable/spinner_focused_holo_dark.xml
@@ -17,7 +17,7 @@
  */
 -->
 
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+<nine-patch xmlns:android="http://schemas.android.com/apk/res/android"
         android:src="@drawable/spinner_focused_holo_dark_am"
         android:autoMirrored="true">
-</bitmap>
+</nine-patch>
