--- a/packages/PrintSpooler/res/layout/print_job_config_activity_content_editing.xml
+++ b/packages/PrintSpooler/res/layout/print_job_config_activity_content_editing.xml
@@ -18,19 +18,22 @@
     android:id="@+id/content_editing"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:divider="?android:attr/dividerHorizontal"
-    android:showDividers="middle">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:background="@color/editable_background">
 
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dip"
+            android:layout_marginTop="32dip"
+            android:layout_marginEnd="24dip"
+            android:layout_marginBottom="24dip"
             android:orientation="vertical"
             android:columnCount="2">
 
@@ -41,14 +44,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="fill_horizontal"
-                android:layout_marginLeft="32dip"
-                android:layout_marginTop="32dip"
-                android:layout_marginRight="32dip"
-                android:layout_marginBottom="12dip"
                 android:layout_row="0"
                 android:layout_column="0"
                 android:layout_columnSpan="2"
-                android:minHeight="?android:attr/listPreferredItemHeight">
+                android:minHeight="?android:attr/listPreferredItemHeightSmall">
             </Spinner>
 
             <!-- Copies -->
@@ -58,31 +57,28 @@
                 android:id="@+id/copies_edittext"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dip"
-                android:layout_marginRight="12dip"
-                android:layout_marginBottom="12dip"
+                android:layout_marginEnd="6dip"
                 android:layout_row="2"
                 android:layout_column="0"
                 android:layout_gravity="bottom"
                 android:inputType="numberDecimal"
                 android:selectAllOnFocus="true"
                 android:minWidth="150dip"
-                android:minHeight="?android:attr/listPreferredItemHeight">
+                android:minHeight="?android:attr/listPreferredItemHeightSmall">
             </view>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dip"
                 android:layout_marginTop="12dip"
-                android:layout_marginRight="12dip"
+                android:layout_marginStart="12dip"
+                android:layout_marginEnd="6dip"
                 android:layout_row="1"
                 android:layout_column="0"
-                android:layout_gravity="left|bottom"
+                android:layout_gravity="start|bottom"
+                android:labelFor="@id/copies_edittext"
                 android:text="@string/label_copies"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:labelFor="@id/copies_edittext">
+                android:textAppearance="@style/PrintOptionTitleTextAppearance">
             </TextView>
 
             <!-- Paper size -->
@@ -91,27 +87,22 @@
                 android:id="@+id/paper_size_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dip"
-                android:layout_marginRight="32dip"
-                android:layout_marginBottom="12dip"
+                android:layout_marginStart="6dip"
                 android:layout_row="2"
                 android:layout_column="1"
-                android:minWidth="150dip"
-                android:minHeight="?android:attr/listPreferredItemHeight">
+                style="@style/PrintOptionSpinnerStyle">
             </Spinner>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dip"
-                android:layout_marginRight="32dip"
                 android:layout_marginTop="12dip"
+                android:layout_marginStart="18dip"
                 android:layout_row="1"
                 android:layout_column="1"
+                android:labelFor="@id/paper_size_spinner"
                 android:text="@string/label_paper_size"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:labelFor="@id/paper_size_spinner">
+                android:textAppearance="@style/PrintOptionTitleTextAppearance">
             </TextView>
 
             <!-- Color -->
@@ -120,27 +111,23 @@
                 android:id="@+id/color_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dip"
-                android:layout_marginRight="12dip"
-                android:layout_marginBottom="12dip"
+                android:layout_marginEnd="6dip"
                 android:layout_row="4"
                 android:layout_column="0"
-                android:minWidth="150dip"
-                android:minHeight="?android:attr/listPreferredItemHeight">
+                style="@style/PrintOptionSpinnerStyle">
             </Spinner>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dip"
                 android:layout_marginTop="12dip"
-                android:layout_marginRight="12dip"
+                android:layout_marginStart="12dip"
+                android:layout_marginEnd="6dip"
                 android:layout_row="3"
                 android:layout_column="0"
+                android:labelFor="@id/color_spinner"
                 android:text="@string/label_color"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:labelFor="@id/color_spinner">
+                android:textAppearance="@style/PrintOptionTitleTextAppearance">
             </TextView>
 
             <!-- Orientation -->
@@ -149,27 +136,22 @@
                 android:id="@+id/orientation_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dip"
-                android:layout_marginRight="32dip"
-                android:layout_marginBottom="12dip"
+                android:layout_marginStart="6dip"
                 android:layout_row="4"
                 android:layout_column="1"
-                android:minWidth="150dip"
-                android:minHeight="?android:attr/listPreferredItemHeight">
+                style="@style/PrintOptionSpinnerStyle">
             </Spinner>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dip"
                 android:layout_marginTop="12dip"
-                android:layout_marginRight="32dip"
+                android:layout_marginStart="18dip"
                 android:layout_row="3"
                 android:layout_column="1"
+                android:labelFor="@id/orientation_spinner"
                 android:text="@string/label_orientation"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:labelFor="@id/orientation_spinner">
+                android:textAppearance="@style/PrintOptionTitleTextAppearance">
             </TextView>
 
             <!-- Pages -->
@@ -178,12 +160,10 @@
                 android:id="@+id/range_options_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dip"
-                android:layout_marginRight="12dip"
+                android:layout_marginEnd="6dip"
                 android:layout_row="6"
                 android:layout_column="0"
-                android:minWidth="150dip"
-                android:minHeight="?android:attr/listPreferredItemHeight">
+                style="@style/PrintOptionSpinnerStyle">
             </Spinner>
 
             <view
@@ -191,8 +171,8 @@
                 android:id="@+id/page_range_edittext"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dip"
-                android:layout_marginRight="32dip"
+                android:layout_marginTop="12dip"
+                android:layout_marginStart="6dip"
                 android:layout_row="6"
                 android:layout_column="1"
                 android:layout_gravity="bottom"
@@ -201,81 +181,41 @@
                 android:hint="@string/pages_range_example"
                 android:inputType="textNoSuggestions"
                 android:visibility="gone"
-                android:minHeight="?android:attr/listPreferredItemHeight">
+                android:minHeight="?android:attr/listPreferredItemHeightSmall">
             </view>
 
             <TextView
                 android:id="@+id/page_range_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dip"
                 android:layout_marginTop="12dip"
-                android:layout_marginRight="12dip"
+                android:layout_marginStart="12dip"
                 android:layout_row="5"
                 android:layout_column="0"
+                android:labelFor="@id/range_options_spinner"
                 android:text="@string/label_pages"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:labelFor="@id/range_options_spinner">
+                android:textAppearance="@style/PrintOptionTitleTextAppearance">
             </TextView>
-
-            <!-- Print pereview  -->
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="fill_horizontal"
-                android:layout_marginLeft="32dip"
-                android:layout_marginTop="32dip"
-                android:layout_marginRight="32dip"
-                android:layout_row="7"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:background="?android:attr/listDivider"
-                android:contentDescription="@null">
-            </ImageView>
-
-            <Button
-                android:id="@+id/print_preview_button"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="fill_horizontal"
-                android:layout_marginLeft="32dip"
-                android:layout_marginRight="32dip"
-                android:layout_row="8"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:text="@string/print_preview"
-                android:gravity="left|center_vertical"
-                android:background="?android:attr/selectableItemBackground"
-                android:minHeight="?android:attr/listPreferredItemHeight">
-            </Button>
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="fill_horizontal"
-                android:layout_marginLeft="32dip"
-                android:layout_marginRight="32dip"
-                android:layout_marginBottom="32dip"
-                android:layout_row="9"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:background="?android:attr/listDivider"
-                android:contentDescription="@null">
-            </ImageView>
 
         </GridLayout>
 
     </ScrollView>
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="@color/separator">
+    </View>
+
     <Button
         android:id="@+id/print_button"
+        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
         android:text="@string/print_button"
-        style="?android:attr/buttonBarButtonStyle">
+        android:textSize="16sp"
+        android:textColor="@color/important_text">
     </Button>
 
 </LinearLayout>
