Allow configuration of Toast gravity settings
  The default gravity value for Gravity was set by the code in Toast.java,
making it impossible to fully customize Toasts systemwide by using overlays.
  Toast.java was changed to read this default value from a resource configuration
file, so we can then override it via an overlay.

Bug: 9799950
Change-Id: I26a914a9aa5e37d3ab0f4cf60b41de5ac14b4a87

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1200,4 +1200,7 @@
          from an emulated display within the physical display. -->
     <bool name="config_forceDefaultOrientation">false</bool>
 
+    <!-- Default Gravity setting for the system Toast view. Equivalent to: Gravity.CENTER_HORIZONTAL | Gravity.BOTTOM -->
+    <integer name="config_toastDefaultGravity">0x00000051</integer>
+
 </resources>
